fixed visual glitch

--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -19,7 +19,7 @@ advanced_mode=true
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(1, 1, 1, 0.317647, 0.972549, 0.972549, 0.972549, 1, 0, 0, 0, 1)
+recent_presets=PackedColorArray(1, 1, 1, 0.317647, 0.972549, 0.972549, 0.972549, 1, 0, 0, 0, 1, 0.972549, 0.0941176, 0.972549, 1, 0.972549, 0.0941176, 0.101961, 1)
 
 [script_setup]
 
