--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -35,7 +35,7 @@ selected_bottom_panel_item=0
 [ScriptEditor]
 
 open_scripts=["res://Scripts/enemypokemon.gd", "res://Scripts/enemy_ui.gd", "res://Scripts/player_ui.gd", "res://Scripts/globalScript.gd"]
-selected_script="res://Scripts/globalScript.gd"
+selected_script="res://Scripts/enemy_ui.gd"
 open_help=["FontFile", "Sprite2D"]
 script_split_offset=70
 list_split_offset=0
