--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -17,11 +17,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 84,
 "folded_lines": Array[int]([]),
-"h_scroll_position": 0,
-"row": 13,
-"scroll_position": 0.0,
+"h_scroll_position": 86,
+"row": 32,
+"scroll_position": 7.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -35,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 0,
-"scroll_position": 0.0,
+"scroll_position": 36.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -45,15 +45,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 35,
+"column": 23,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 10,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 35,
-"selection_from_line": 10,
-"selection_to_column": 41,
-"selection_to_line": 10,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
