--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/images/ui/")
+dock_filesystem_selected_paths=PackedStringArray("res://Assets/images/ui/selector.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Assets/", "res://Assets/images/", "res://Assets/images/ui/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -29,14 +29,14 @@ open_scenes=PackedStringArray("res://Scenes/mainTest.tscn")
 current_scene="res://Scenes/mainTest.tscn"
 center_split_offset=0
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=2
+selected_main_editor_idx=0
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 open_scripts=["res://Scripts/enemypokemon.gd", "res://Scripts/enemy_ui.gd", "res://Scripts/globalScript.gd", "res://Scripts/player_ui.gd"]
-selected_script="res://Scripts/player_ui.gd"
-open_help=["@GlobalScope", "FontFile", "Sprite2D"]
+selected_script=""
+open_help=["@GlobalScope", "FontFile", "Range", "Sprite2D"]
 script_split_offset=70
 list_split_offset=0
 zoom_factor=1.0
