--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 33,
-"folded_lines": Array[int]([43, 55, 67, 79, 91]),
+"column": 41,
+"folded_lines": Array[int]([45, 57, 69, 81, 93]),
 "h_scroll_position": 0,
-"row": 220,
-"scroll_position": 105.0,
+"row": 201,
+"scroll_position": 128.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,12 +17,16 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 9,
+"column": 26,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 3,
-"scroll_position": 63.0,
-"selection": false,
+"row": 68,
+"scroll_position": 38.0,
+"selection": true,
+"selection_from_column": 16,
+"selection_from_line": 68,
+"selection_to_column": 26,
+"selection_to_line": 68,
 "syntax_highlighter": "GDScript"
 }
 
@@ -35,7 +39,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
-"scroll_position": 0.0,
+"scroll_position": 1.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
