--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -16,7 +16,7 @@ create_new_node=Rect2(510, 190, 900, 700)
 [color_picker]
 
 picker_shape=3
-recent_presets=PackedColorArray(1, 1, 1, 0.564706, 1, 1, 1, 0.4, 1, 1, 1, 1, 0, 0, 0, 0.980392, 0, 0, 0, 1)
+recent_presets=PackedColorArray(1, 1, 1, 0.564706, 1, 1, 1, 0.4, 0, 0, 0, 0.980392, 1, 1, 1, 0.305882, 0, 0, 0, 1, 1, 1, 1, 1)
 
 [linked_properties]
 
