--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -3,11 +3,11 @@
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 41,
-"folded_lines": Array[int]([45, 57, 69, 81, 93]),
+"column": 39,
+"folded_lines": Array[int]([46, 58, 70, 82, 94]),
 "h_scroll_position": 0,
-"row": 201,
-"scroll_position": 128.0,
+"row": 202,
+"scroll_position": 141.667,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -17,16 +17,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 27,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 68,
-"scroll_position": 38.0,
-"selection": true,
-"selection_from_column": 16,
-"selection_from_line": 68,
-"selection_to_column": 26,
-"selection_to_line": 68,
+"row": 4,
+"scroll_position": 24.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -39,7 +35,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 16,
-"scroll_position": 1.0,
+"scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
